fixed navgrid width on mobile

--- a/src/components/NavboxGrid/NavBoxGrid.module.scss
+++ b/src/components/NavboxGrid/NavBoxGrid.module.scss
@@ -111,6 +111,9 @@
     padding: 20px;
     flex-direction: column;
     width: 90%;
+    .gridConainer{
+      width:auto;
+    }
     .grid{
       margin-bottom: 2rem;
     }
